# stylus-create2

./: .gitignore  Cargo.toml  README.md
crates/counter/: Cargo.toml
crates/factory/: Cargo.toml
crates/factory/src/: deployment_tx_data  lib.rs
