[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.4.3"
mini-alloc = "0.4.2"

# important- lock to this version
alloy-sol-types = "0.3.1"

[features]
export-abi = ["stylus-sdk/export-abi"]
#debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]
